tested communication between two emulators.

--- a/Android/BusTicketPassenger/res/layout/activity_buy.xml
+++ b/Android/BusTicketPassenger/res/layout/activity_buy.xml
@@ -83,6 +83,7 @@
     </TableRow>
     
     <Button android:id="@+id/button_buy"
-            android:text="@string/buy"/>   
+            android:text="@string/buy"
+            android:onClick="buyTickets"/>   
 
 </TableLayout>
