--- a/Android/BusTicketPassenger/res/layout/row_ticket.xml
+++ b/Android/BusTicketPassenger/res/layout/row_ticket.xml
@@ -4,6 +4,10 @@
     android:layout_height="wrap_content"
     android:orientation="vertical" >
     
+    <TextView android:id="@+id/textview_ticket_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    
     <TextView android:id="@+id/textview_ticket_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
@@ -12,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     
-    <TextView android:id="@+id/textview_ticket_price"
+    <TextView android:id="@+id/textview_ticket_bus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     
