--- a/Android/BusTicketPassenger/res/layout/activity_login.xml
+++ b/Android/BusTicketPassenger/res/layout/activity_login.xml
@@ -181,7 +181,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="@string/buttontext_register" />
+            android:text="@string/buttontext_register"
+            android:onClick="onRegisterClick"/>
     </LinearLayout>
 
 </ScrollView>
