--- a/Android/BusTicketPassenger/res/layout/activity_login.xml
+++ b/Android/BusTicketPassenger/res/layout/activity_login.xml
@@ -1,44 +1,30 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="#efefef" >
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="230dp"
         android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
         android:orientation="vertical"
         android:padding="4dp" >
 
 	<LinearLayout
 	    android:id="@+id/login_wrapper"
-	    android:layout_width="match_parent"
-	    android:layout_height="32dp"
+	    android:layout_width="200dp"
+	    android:layout_height="100dp"
+	    android:background="#ffffff"
 	    android:orientation="vertical" >
-
-        <TextView
-            android:id="@+id/login_header"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/label_login"
-            android:textSize="12pt" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/label_login_username" />
 
         <EditText
             android:id="@+id/edittext_login_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/hint_login_username"
-            android:lines="1"
-            android:text="Username" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/label_login_password" />
+            android:lines="1" />
 
         <EditText
             android:id="@+id/edittext_login_password"
@@ -49,32 +35,39 @@
             android:lines="1"
             android:text="Password" />
 
-        <Button
+       
+		</LinearLayout>
+		
+		<RelativeLayout
+		    android:layout_width="200dp"
+		    android:layout_height="40dp"
+		    android:layout_marginBottom="10dp"
+		    android:background="#aeaeae" >
+
+        <TextView
+            android:id="@+id/login_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:onClick="onLoginClick"
-            android:text="@string/buttontext_login" />
-		</LinearLayout>
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:text="@string/label_login"
+            android:textColor="#ffffff"
+            android:textColorHint="#ffffff"
+            android:textSize="12pt" />
 
+        </RelativeLayout>
+		
 		<LinearLayout
 		    android:id="@+id/register_wrapper"
-		    android:layout_width="match_parent"
-		    android:layout_height="32dp"
+		    android:layout_width="200dp"
+		    android:layout_height="0dp"
+		    android:background="#ffffff"
 		    android:orientation="vertical" >
 
         >
-        <TextView
-            android:id="@+id/register_header"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/label_register"
-            android:textSize="12pt" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/label_register_username" />
+        
 
         <EditText
             android:id="@+id/edittext_register_username"
@@ -82,11 +75,6 @@
             android:layout_height="wrap_content"
             android:hint="@string/hint_register_username"
             android:lines="1" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/label_register_password" />
 
         <EditText
             android:id="@+id/edittext_register_password"
@@ -96,11 +84,6 @@
             android:inputType="textPassword"
             android:lines="1" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/label_register_name" />
-
         <EditText
             android:id="@+id/edittext_register_name"
             android:layout_width="match_parent"
@@ -108,20 +91,10 @@
             android:hint="@string/hint_register_name"
             android:lines="1" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/label_register_card_type" />
-
         <Spinner
             android:id="@+id/spinner_register_card_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/label_register_card_number" />
 
         <EditText
             android:id="@+id/edittext_register_card_number"
@@ -141,14 +114,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:calendarViewShown="false" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:onClick="onRegisterClick"
-            android:text="@string/buttontext_register" />
     </LinearLayout>
+    	
+		<RelativeLayout
+		    android:layout_width="200dp"
+		    android:layout_height="40dp"
+		    android:layout_marginTop="10dp"
+		    android:background="#aeaeae" >
+	
+		<TextView
+            android:id="@+id/register_header"
+             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:text="@string/label_register"
+            android:textColor="#ffffff"
+            android:textSize="12pt" />
+		</RelativeLayout>	
     </LinearLayout>
 	
-</ScrollView>
+</RelativeLayout>
