--- a/Android/BusTicketInspector/res/layout/row_ticket.xml
+++ b/Android/BusTicketInspector/res/layout/row_ticket.xml
@@ -1,24 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
-    
-    <TextView android:id="@+id/textview_ticket_type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    
-    <TextView android:id="@+id/textview_ticket_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    
-    <TextView android:id="@+id/textview_ticket_duration"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    
-    <TextView android:id="@+id/textview_ticket_bus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    
+    android:orientation="vertical" xmlns:app="http://schemas.android.com/apk/res/pt.feup.busticketinspector">
 
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/square"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="#aeaeae" >
+
+        <pt.feup.busticket.tickets.TextViewFont
+            android:id="@+id/textview_ticket_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center|center_horizontal|center_vertical"
+            android:text="T1"
+            android:textColor="#ffffff"
+            android:textSize="40sp"
+            app:customFont="fonts/Roboto-Black.ttf" />
+
+    </RelativeLayout>
+
+    <pt.feup.busticket.tickets.TextViewFont
+        android:id="@+id/textview_ticket_bus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/square"
+        android:layout_alignRight="@+id/textview_ticket_duration"
+        android:text="busid"
+        android:textSize="15sp" />
+
+    <pt.feup.busticket.tickets.TextViewFont
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textview_ticket_duration"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:text="Ends on:"
+        android:textSize="10sp"
+        app:customFont="assets/Roboto-Thin.ttf" />
+    
+    <pt.feup.busticket.tickets.TextViewFont
+        android:id="@+id/textview_ticket_duration"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textview_ticket_bus"
+        android:layout_alignParentRight="true"
+        android:layout_toRightOf="@+id/square"
+        android:gravity="right"
+         android:layout_marginRight="10dp"
+        android:text="date"
+        android:textSize="20sp" />
+
+    <pt.feup.busticket.tickets.TextViewFont
+        android:id="@+id/textview_ticket_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/square"
+        android:layout_alignLeft="@+id/textview_ticket_duration"
+        android:paddingLeft="5dp"
+        android:text="aaaaaaaaaaaaaaaaaaa"
+        android:textSize="10sp" />
+
+</RelativeLayout>
