--- a/Android/BusTicketPassenger/res/layout/activity_buy.xml
+++ b/Android/BusTicketPassenger/res/layout/activity_buy.xml
@@ -1,4 +1,4 @@
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,6 +7,12 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".BuyActivity" xmlns:app="http://schemas.android.com/apk/res/pt.feup.busticketpassenger">
+
+	<TableLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_centerHorizontal="true"
+	    android:layout_centerVertical="true" >
 
     <TableRow
         android:layout_width="wrap_content"
@@ -61,7 +67,8 @@
         
         <Spinner
             android:id="@+id/t1_quantity"
-            android:layout_gravity="center_horizontal|center_vertical" />
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:gravity="center_horizontal" />
 
     </TableRow>
     
@@ -80,7 +87,8 @@
 
         <Spinner
             android:id="@+id/t2_quantity"
-            android:layout_gravity="center_horizontal|center_vertical" />
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:gravity="center_horizontal" />
 
     </TableRow>
     
@@ -99,7 +107,8 @@
 
         <Spinner
             android:id="@+id/t3_quantity"
-            android:layout_gravity="center_horizontal|center_vertical" />
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:gravity="center_horizontal" />
 
     </TableRow>
     
@@ -110,3 +119,4 @@
         android:text="@string/buy" />
 
 </TableLayout>
+</RelativeLayout>
